[gd_scene load_steps=11 format=2]

[ext_resource path="res://Data/Skript/Gegner.gd" type="Script" id=1]
[ext_resource path="res://Data/Skript/Box.gd" type="Script" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.73058
height = 23.7891

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 116.714, 19.3025 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 10, 19.2609 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 10, 2.22251 )

[sub_resource type="Animation" id=5]
resource_name = "Box"
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Box/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Box/CollisionShape2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1.457, 0 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "Box 2"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Box/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.1 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 10 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.6, 0.9 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Sprite/Boxing range/CollisionShape2D:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray(  ),
"transitions": PoolRealArray(  ),
"update": 1,
"values": [  ]
}

[sub_resource type="Animation" id=7]
loop = true

[sub_resource type="Animation" id=8]
resource_name = "box 1"
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite/Box/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite/Box/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ false, true ]
}

[node name="Enemy" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 7
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]

[node name="Running range" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Running range"]
position = Vector2( -135.445, -0.0693779 )
shape = SubResource( 2 )

[node name="Boxing range" type="Area2D" parent="Sprite"]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Boxing range"]
position = Vector2( -9.35029, -2.89542 )
shape = SubResource( 3 )

[node name="Box" type="Area2D" parent="Sprite"]
position = Vector2( -10, -10 )
collision_layer = 2
collision_mask = 7
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/Box"]
position = Vector2( 1.457, 0 )
shape = SubResource( 4 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Box = SubResource( 5 )
"anims/Box 2" = SubResource( 6 )
anims/Idle = SubResource( 7 )
"anims/box 1" = SubResource( 8 )

[node name="Timer" type="Timer" parent="."]
one_shot = true

[connection signal="body_entered" from="Sprite/Running range" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Sprite/Running range" to="." method="_on_Area2D_body_exited"]
[connection signal="body_entered" from="Sprite/Boxing range" to="." method="_on_Boxing_range_body_entered"]
[connection signal="body_entered" from="Sprite/Boxing range" to="Sprite/Box" method="_on_Boxing_range_body_entered"]
[connection signal="body_entered" from="Sprite/Box" to="." method="_on_Box_body_entered"]
